--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.5.0)
 project(dramsim3)
+
+# set(CMAKE_C_COMPILER "/opt/homebrew/bin/gcc-14")
+# set(CMAKE_CXX_COMPILER "/opt/homebrew/bin/g++-14")
 
 # Generate compile_commands.json for clang based tools
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
