add some comments

--- a/configs/HBM1_4Gb_x128.ini
+++ b/configs/HBM1_4Gb_x128.ini
@@ -1,11 +1,21 @@
 [dram_structure]
 protocol = HBM
 bankgroups = 4
-banks_per_group = 4
+banks_per_group = 4 ; 4 * 4 = 16 banks, each bank has a subarray of 16384 rows
+                    ; 64 columns, and device_width of 128, so the total size of
+                    ; a single bank has 16384 * 64 * 128 / 8 bytes = 16 MB.
+                    ; We have also kown that the device_width is 128 bits, and
+                    ; the bus width is 128 bits, so the number of dies per rank
+                    ; is 128 / 128 = 1, cause all of the dies together make up
+                    ; the bus width of DRAM. Considering that 16 banks have a
+                    ; total size of 16 * 16 = 256 MB, and a channel has 512 MB,
+                    ; so it should have 2 ranks per channel.
 rows = 16384
 columns = 64
-device_width = 128
-BL = 4
+device_width = 128 ; For HBM1, 128 DQ width.
+BL = 4 ; For HBM1, legacy mode provides 256 bit prefetch per memory Read and
+       ; Write access when the burst length (BL) is set to 2.
+       ; BL2 bursts are supported in legacy mode only.
 num_dies = 4
 
 [timing]
@@ -49,10 +59,25 @@ IDD5AB = 250
 IDD6x = 31
 
 [system]
-channel_size = 512
-channels = 8
-bus_width = 128
-address_mapping = rorabgbachco
+channel_size = 512 ; 2 KB page size per channel, and 512 MB total size per channel.
+channels = 8 ; See Table 4 for the HBM Channel Addressing.
+             ;
+             ; Legacy Mode (HBM1):
+             ; Density per Channel   1 Gb      2 Gb      4 Gb
+             ; Prefetch Size (bits)  256       256       256
+             ; Row Address           RA[12:0]  RA[13:0]  RA[13:0]
+             ; (rows per bank)       8192      16384     16384
+             ; Column Address        CA[5:0]   CA[5:0]   CA[5:0]
+             ; (columns per bank)    64        64        64
+             ; Bank Address          BA[2:0]   BA[2:0]   BA[3:0]
+             ; (banks)               8         8         16
+             ; Page Size             2 KB      2 KB      2 KB     (pageSize=columns per bank * Prefetch Size / 8)
+             ; (Page size and prefetch size are per channel in legacy mode, and per pseudo channel in PC mode.)
+             ; Refresh               8K/32 ms  8K/32 ms  8K/32 ms
+             ; Refresh Period        3.9 us    3.9 us    3.9 us
+             ; Density Code          0001      0010      0011
+bus_width = 128 ;
+address_mapping = rorabgbachco ; row, rank, bank group, bank, channel, column
 queue_structure = PER_BANK
 row_buf_policy = OPEN_PAGE
 cmd_queue_size = 8
