--- a/configs/HBM2_4Gb_x128.ini
+++ b/configs/HBM2_4Gb_x128.ini
@@ -1,13 +1,25 @@
 [dram_structure]
 protocol = HBM
-bankgroups = 4
-banks_per_group = 4
+bankgroups = 4 ; See Table 5 in Page 8 of JESD235B for details.
+               ; Bank Group Assignments
+               ; 8 banks  ==> 4 bankgroups, 2 banks per group
+               ; 16 banks ==> 4 bankgroups, 4 banks per group
+               ; 32 banks ==> 8 bankgroups, 4 banks per group
+banks_per_group = 4 ; 4 * 4 = 16 banks, each bank has a subarray of 16384 rows
+                    ; 64 columns, and device_width of 128, so the total size of
+                    ; a single bank has 16384 * 64 * 128 / 8 bytes = 16 MB.
+                    ; We have also kown that the device_width is 128 bits, and
+                    ; the bus width is 128 bits, so the number of dies per rank
+                    ; is 128 / 128 = 1, cause all of the dies together make up
+                    ; the bus width of DRAM. Considering that 16 banks have a
+                    ; total size of 16 * 16 = 256 MB, and a channel has 512 MB,
+                    ; so it should have 2 ranks per channel.
 rows = 16384
 columns = 64
-device_width = 128
-BL = 4
-num_dies = 4
-
+device_width = 128 ; For HBM2, 64 DQ width for PC mode;
+BL = 4 ; For HBM2, PC mode requires that the burst length (BL) is set to 4.
+num_dies = 4 ; See Figure 1 of JESD235B for overview of DRAM Die Stack.
+             ; PC mode requires that the burst length is set to 4 (BL4) in MR3 OP7.
 [timing]
 tCK = 1
 CL = 14
@@ -49,8 +61,47 @@ IDD5AB = 250
 IDD6x = 31
 
 [system]
-channel_size = 512
-channels = 8
+channel_size = 512 ; 2 KB page size per channel
+channels = 8 ; Pseudo channel (PC) mode (HBM2) divides a channel into two
+             ; individual sub-channels of 64 bit I/O each, providing 256
+             ; bit prefetch per memory read and write access for each pseudo
+             ; channel.
+             ;
+             ; See Table 4 in Page 6 of JESD235B for the HBM Channel Addressing.
+             ;
+             ; Pseudo Channel (PC) Mode (HBM2):
+             ; Density per Channel         2 Gb      4 Gb      6 Gb      8 Gb
+             ; Density per Pseudo Channel  1 Gb      2 Gb      3 Gb      4 Gb
+             ; Prefetch Size per PC (bits) 256       256       256       256
+             ; Row Address                 RA[13:0]  RA[13:0]  RA[14:0]* RA[14:0]
+             ; (rows per bank)             16384     16384     24576*    32768
+             ; (* for 3 GB PC density, RA[14:13] = 11 is invalid.)
+             ; Column Address              CA[5:1]   CA[5:1]   CA[5:1]   CA[5:1]
+             ; (columns per bank)          32        32        32        32
+             ; Bank Address                BA[2:0]   BA[3:0]   BA[3:0]   BA[3:0]
+             ; (banks)                     8         16        16         16
+             ; Page Size per PC            1 KB      1 KB      1 KB      1 KB
+             ; Refresh                     8K/32 ms  8K/32 ms  8K/32 ms  8K/32 ms
+             ; Refresh Period              3.9 us    3.9 us    3.9 us    3.9 us
+             ; Density Code                0010      0011      0101      0110
+             ;
+             ; Configuration         8 Gb/8-High  8 Gb/12-High      12 Gb/8-High  12 Gb/12-High    16 Gb/8-High 16 Gb/12-High
+             ; (These configurations are optimized for HBM stacks using 8 or 12 DRAM dies.)
+             ; Density per Channel   8 Gb         12 Gb             12 Gb         18 Gb            16 Gb        24 Gb
+             ; Density per PC (bits) 4 Gb         6 Gb              6 Gb          9 Gb             8 Gb         12 Gb
+             ; Prefetch Size per PC  256          256               256           256              256          256
+             ; Row Address           RA[13:0]     RA[13:0]          RA[14:0]*     RA[14:0]*        RA[14:0]     RA[14:0]
+             ; (rows per bank)       16384        16384             24576*        24576*           32768        32768
+             ; (* for 12 Gb/8-High and 12 Gb/12-High density, RA[14:13] = 11 is invalid.)
+             ; Column Address        CA[5:1]      CA[5:1]           CA[5:1]       CA[5:1]          CA[5:1]      CA[5:1]
+             ; (columns per bank)    32           32                32            32               32           32
+             ; Bank Address          SID,BA[3:0]  SID[1:0],BA[3:0]* SID,BA[3:0]  SID[1:0],BA[3:0]* SID,BA[3:0]  SID[1:0],BA[3:0]*
+             ; (banks)               32           48*               32           48*               32           48*
+             ; (* for 8 Gb/12-High, 12 Gb/12-High and 16 Gb/12-High density, SID[1:0] = 11 is invalid.)
+             ; Page Size per PC      1 KB         1 KB              1 KB         1 KB              1 KB         1 KB
+             ; Refresh               8K/32 ms     8K/32 ms          8K/32 ms     8K/32 ms          8K/32 ms     8K/32 ms
+             ; Refresh Period        3.9 us       3.9 us            3.9 us       3.9 us            3.9 us       3.9 us
+             ; Density Code          0100         1001              1000         1011              1010         1100
 bus_width = 128
 address_mapping = rorabgbachco
 queue_structure = PER_BANK
