--- a/configs/HBM2_8Gb_x128.ini
+++ b/configs/HBM2_8Gb_x128.ini
@@ -1,7 +1,15 @@
 [dram_structure]
 protocol = HBM
 bankgroups = 4
-banks_per_group = 4
+banks_per_group = 4 ; 4 * 4 = 16 banks, each bank has a subarray of 32768 rows
+                    ; 64 columns, and device_width of 128, so the total size of
+                    ; a single bank has 32768 * 64 * 128 / 8 bytes = 32 MB.
+                    ; We have also kown that the device_width is 128 bits, and
+                    ; the bus width is 128 bits, so the number of dies per rank
+                    ; is 128 / 128 = 1, cause all of the dies together make up
+                    ; the bus width of DRAM. Considering that 16 banks have a
+                    ; total size of 16 * 32 = 512 MB, and a channel has 1024 MB,
+                    ; so it should have 2 ranks per channel.
 rows = 32768
 columns = 64
 device_width = 128
